added table with results and playing with regex'es